# ECS-E

./: .gitignore  CMakeLists.txt  README.md
include/ecse/: Component.hpp  Entity.hpp  Event.hpp  System.hpp
src/ecse/: Entity.cpp
testing/: EntityTests.cpp  EventTests.cpp
